add translation feature

--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -1,1 +1,10 @@
-<b>Hello Phonebook!</b>
+<html xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
+<h:head>
+</h:head>
+<h:body>
+	<f:view locale="fa">
+		#{msgs.hello}
+	</f:view>
+</h:body>
+</html>
