--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -1,10 +1,11 @@
 <html xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      	xmlns:p="http://primefaces.org/ui">
 <h:head>
 </h:head>
 <h:body>
 	<f:view locale="fa">
-		#{msgs.hello}
+		<p:outputLabel value="#{msgs.hello}" />
 	</f:view>
 </h:body>
 </html>
