--- a/Phonebook-web/src/main/webapp/personList.xhtml
+++ b/Phonebook-web/src/main/webapp/personList.xhtml
@@ -6,10 +6,8 @@
 	xmlns:f="http://java.sun.com/jsf/core" xml:lang="en" lang="en"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head></h:head>
-
-<h:body>
-<f:view locale="fa">
+<ui:composition template="/template/base.xhtml">
+<ui:define name="content">
 <h:form id="table_form">
 
 <p:panel>
@@ -93,6 +91,6 @@
 			type="button" />
 	</p:confirmDialog>
 </h:form>
-</f:view>
-</h:body>
+</ui:define>
+</ui:composition>
 </html>
