--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -1,13 +1,13 @@
-<html xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      	xmlns:p="http://primefaces.org/ui">
-<h:head>
-</h:head>
-<h:body>
-<f:view locale="fa">
-<h:form>
-	<h:commandLink action="#{personMB.personMng}" value="#{msgs.personList}" />
-</h:form>
-</f:view>
-</h:body>
+<html xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
+<ui:composition template="/template/base.xhtml">
+	<ui:define name="content">
+		<h:form>
+			<h:commandLink action="#{personMB.personMng}"
+				value="#{msgs.personList}" />
+		</h:form>
+	</ui:define>
+</ui:composition>
 </html>
