--- a/Phonebook-web/src/main/webapp/pages/personList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/personList.xhtml
@@ -11,8 +11,7 @@
 <h:form id="table_form">
 
 <p:panel>
-	<h:commandLink action="#{personMB.personCreateLink}"
-		title="#{msgs.create_person}">
+	<h:commandLink action="#{personMB.personCreateLink}" title="#{msgs.create_person}">
 		<h:graphicImage name="plus.png" library="images" width="32" height="32" />
 	</h:commandLink>
 </p:panel>
@@ -33,14 +32,12 @@
 		</div>
 	</p:column>
 
-	<p:column headerText="#{msgs.firstName}"
-		filterBy="#{person.firstName}"
+	<p:column headerText="#{msgs.firstName}" filterBy="#{person.firstName}"
 		filterMatchMode="contains">
 		#{person.firstName}
 	</p:column>
 
-	<p:column headerText="#{msgs.lastName}"
-		filterBy="#{person.lastName}"
+	<p:column headerText="#{msgs.lastName}" filterBy="#{person.lastName}"
 		filterMatchMode="contains">
 		#{person.lastName}
 	</p:column>
