--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -3,12 +3,16 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/template/base.xhtml">
-	<ui:define name="content">
-		<h:form>
-			<h:commandLink action="#{personMB.personMng}">
-				<h:graphicImage name="person.png" library="images" />
-			</h:commandLink>
-		</h:form>
-	</ui:define>
+<ui:define name="content">
+	<h:form>
+		<h:commandLink action="#{personMB.personMng}">
+			<h:graphicImage name="person.png" library="images" width="128" height="128" />
+		</h:commandLink>
+		
+		<h:commandLink action="#{contactNumberMB.contactNumberMng}">
+			<h:graphicImage name="contactNumber.png" library="images" width="128" height="128" />
+		</h:commandLink>
+	</h:form>
+</ui:define>
 </ui:composition>
 </html>
