add marriage status CRUD

--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -6,11 +6,15 @@
 <ui:define name="content">
 	<h:form>
 		<h:commandLink action="#{personMB.personMng}">
-			<h:graphicImage name="person.png" library="images" width="128" height="128" />
+			<h:graphicImage name="person.png" library="img" width="128" height="128" />
 		</h:commandLink>
 		
 		<h:commandLink action="#{contactNumberMB.contactNumberMng}">
-			<h:graphicImage name="contactNumber.png" library="images" width="128" height="128" />
+			<h:graphicImage name="contactNumber.png" library="img" width="128" height="128" />
+		</h:commandLink>
+		
+		<h:commandLink action="#{marriageStatusMB.marriageStatusMng}">
+			<h:graphicImage name="marriageStatus.png" library="img" width="128" height="128" />
 		</h:commandLink>
 	</h:form>
 </ui:define>
