correct some css and gui

--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
@@ -6,11 +8,11 @@
 <ui:define name="content">
 	<h:form>
 		<h:commandLink action="#{personMB.personMng}">
-			<h:graphicImage name="person.png" library="img" width="128" height="128" />
+			<h:graphicImage name="person.png" library="img" width="96" height="96" />
 		</h:commandLink>
 		
 		<h:commandLink action="#{marriageStatusMB.marriageStatusMng}">
-			<h:graphicImage name="marriageStatus.png" library="img" width="128" height="128" />
+			<h:graphicImage name="marriageStatus.png" library="img" width="96" height="96" />
 		</h:commandLink>
 	</h:form>
 </ui:define>
