--- a/Phonebook-web/src/main/webapp/pages/person/personCreate.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personCreate.xhtml
@@ -89,8 +89,10 @@
 			
 		</p:panelGrid>
 	</p:panel>
-	<h:commandButton styleClass="float-left" value="#{msgs.save}"
-		action="#{personMB.personCreate}" />
+	<p:panel style="text-align: left">
+		<h:commandButton styleClass="float-left" value="#{msgs.save}"
+			action="#{personMB.personCreate}" />
+	</p:panel>
 </h:form>
 </ui:define></ui:composition>
 </html>
