--- a/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
@@ -10,7 +10,7 @@
 <ui:define name="content">
 <h:form id="table_form">
 
-<p:panel>
+<p:panel style="text-align: left">
 	<h:commandLink action="#{personMB.personCreateLink}" title="#{msgs.create_person}">
 		<h:graphicImage name="plus.png" library="img" width="32" height="32" />
 	</h:commandLink>
