clean some extra csses

--- a/Phonebook-web/src/main/webapp/pages/person/marriageStatusList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/marriageStatusList.xhtml
@@ -32,7 +32,7 @@
 		</div>
 	</p:column>
 
-	<p:column headerText="#{msgs.number}" filterBy="#{marriageStatus.marriageStatus}"
+	<p:column headerText="#{msgs.marriageStatus}" filterBy="#{marriageStatus.marriageStatus}"
 		filterMatchMode="contains">
 		#{marriageStatus.marriageStatus}
 	</p:column>
