add sortby for person

--- a/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
+++ b/Phonebook-web/src/main/webapp/pages/person/personList.xhtml
@@ -33,22 +33,22 @@
 	</p:column>
 
 	<p:column headerText="#{msgs.firstName}" filterBy="#{person.firstName}"
-		filterMatchMode="contains">
+		filterMatchMode="contains" sortBy="#{person.firstName}">
 		#{person.firstName}
 	</p:column>
 
 	<p:column headerText="#{msgs.lastName}" filterBy="#{person.lastName}"
-		filterMatchMode="contains">
+		filterMatchMode="contains" sortBy="#{person.lastName}">
 		#{person.lastName}
 	</p:column>
 
 	<p:column headerText="#{msgs.nationalCode}" filterBy="#{person.nationalCode}"
-		filterMatchMode="contains">
+		filterMatchMode="contains" sortBy="#{person.nationalCode}">
 		#{person.nationalCode}
 	</p:column>
 
 	<p:column headerText="#{msgs.marriageStatus}" filterBy="#{person.marriageStatus}"
-		filterMatchMode="contains">
+		filterMatchMode="contains" sortBy="#{person.marriageStatus}">
 		#{person.marriageStatus}
 	</p:column>
 
