--- a/Phonebook-web/src/main/webapp/index.xhtml
+++ b/Phonebook-web/src/main/webapp/index.xhtml
@@ -8,13 +8,13 @@
 <ui:define name="content">
 	<h:form>
 		<h:panelGroup styleClass="div main-icon">
-			<h:commandLink action="#{personMB.personMng}">
+			<h:commandLink action="#{personMB.personMng}" title="#{msgs.person}">
 				<h:graphicImage name="person.png" library="img" width="64" height="64" />
 			</h:commandLink>
 		</h:panelGroup>
 		
 		<h:panelGroup styleClass="div main-icon">
-			<h:commandLink action="#{marriageStatusMB.marriageStatusMng}">
+			<h:commandLink action="#{marriageStatusMB.marriageStatusMng}" title="#{msgs.marriageStatus}">
 				<h:graphicImage name="marriageStatus.png" library="img" width="64" height="64" />
 			</h:commandLink>
 		</h:panelGroup>
